[project]
name = "comfy-image-saver"
description = "All the tools you need to save images with their generation metadata on ComfyUI. Compatible with Civitai & Prompthero geninfo auto-detection. Works with png, jpeg and webp."
version = "1.0.0"
license = "LICENSE"
dependencies = ["piexif"]

[project.urls]
Repository = "https://github.com/giriss/comfy-image-saver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfy-image-saver"
Icon = ""
